fix stars, start fixing spacing

--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ h1 {
 
 h2 {
   font-size:64px;
-  margin-bottom:20px;
   line-height:1.25em;
   }
 
